# PayD

./: Cargo.toml  ISSUES.md  UI_UX_REFINEMENT_IMPLEMENTATION.md
backend/: .env.example  TODO.md  package.json
backend/src/controllers/: authController.ts  balanceController.ts  bulkPaymentController.ts  dbScalingController.ts  payrollBonusController.ts
backend/src/middlewares/: auth.ts  rbac.ts  require2fa.ts  require2faForAdmin.ts
backend/src/routes/: balanceRoutes.ts  bulkPaymentRoutes.ts  dbScalingRoutes.ts  payrollBonusRoutes.ts
backend/src/services/: bulkPaymentService.ts  dbScalingService.ts  payrollBonusService.ts  payrollScheduleService.ts  payrollSchedulerService.ts
contracts/asset_path_payment/src/: lib.rs  test.rs
contracts/bulk_payment/src/: test.rs
contracts/cross_asset_payment/src/: lib.rs  test.rs
contracts/milestone_escrow/: Cargo.toml
contracts/milestone_escrow/src/: lib.rs  test.rs
contracts/revenue_split/src/: lib.rs  test.rs
contracts/smart_wallet/src/: lib.rs  test.rs
contracts/vesting_escrow/src/: lib.rs  test.rs
frontend/src/__tests__/: BulkPayrollUpload.test.tsx  CSVUploader.test.tsx  EmployeeEntry.test.tsx  TransactionPendingOverlay.test.tsx  useContractMetrics.test.ts
frontend/src/components/: AdvancedSearchFilter.tsx  ContractMetricsPanel.tsx  EmployeeList.tsx  EmployeeProfileModal.tsx  OnboardingTour.tsx  SkeletonLoader.tsx  TransactionPendingOverlay.tsx  WalletQRCode.tsx
frontend/src/hooks/: useContractMetrics.ts
frontend/src/pages/: BulkPayrollUpload.tsx  CrossAssetPayment.tsx  PayrollAnalytics.tsx  Settings.tsx  (+2 more)
(+12 files in other folders)
